Ignore Output/Release/*

--- a/MobileApp/.cvsignore
+++ b/MobileApp/.cvsignore
@@ -1,2 +1,34 @@
 FinalOutput
 Output
+Output/Release
+Output/Release/CheckBox.s
+Output/Release/CheckBox.s.deps
+Output/Release/EditBoxScreen.s
+Output/Release/EditBoxScreen.s.deps
+Output/Release/LabelScreen.s
+Output/Release/LabelScreen.s.deps
+Output/Release/MAHeaders.h
+Output/Release/RadioButton.s
+Output/Release/RadioButton.s.deps
+Output/Release/RadioButtonGroup.s
+Output/Release/RadioButtonGroup.s.deps
+Output/Release/ResultScreen.s
+Output/Release/ResultScreen.s.deps
+Output/Release/ScreenTransition.s
+Output/Release/ScreenTransition.s.deps
+Output/Release/Sld.tab
+Output/Release/Util.s
+Output/Release/Util.s.deps
+Output/Release/fp.xml
+Output/Release/log.txt
+Output/Release/main.s
+Output/Release/main.s.deps
+Output/Release/panic.report
+Output/Release/profile.txt
+Output/Release/program
+Output/Release/program.comb
+Output/Release/resources
+Output/Release/resources.deps
+Output/Release/screen.s
+Output/Release/screen.s.deps
+Output/Release/stabs.tab
